--- a/.github/workflows/issues-to-trello.yaml
+++ b/.github/workflows/issues-to-trello.yaml
@@ -36,6 +36,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: niaid/trellaction-workflow
+          ref: ${{ github.ref }}
   
       - name: Set up Python
         uses: actions/setup-python@v2
