--- a/.github/workflows/issues-to-trello.yaml
+++ b/.github/workflows/issues-to-trello.yaml
@@ -7,6 +7,11 @@ on:
         required: true
         type: string
         description: Name of the list that should receive the Trello cards
+      branch_name:
+        required: false  
+        type: string
+        description: Name of the branch to checkout
+        default: 'main'  # Default to main unless some other branch is needed
     secrets:
       trello_board_id:
         required: true
@@ -36,7 +41,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: niaid/trellaction-workflow
-          ref: ${{ github.ref }}
+          ref: ${{ inputs.branch_name }}
   
       - name: Set up Python
         uses: actions/setup-python@v2
